--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ nav ul li a:hover {
     font-size: 1.1rem;
     line-height: 1.6;
     color: #555;
+    text-align: right;
 }
 
 /* Profile Image */
